--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 * linguist-vendored
-*.rb linguist-language=JavaScript
+*.css linguist-vendored=false
+*.js linguist-detectable=true
